fix(logos-docusaurus-theme): fix image light box invisible backdrop issue

--- a/packages/logos-docusaurus-theme/src/client/containers/LightBox/styles.module.scss
+++ b/packages/logos-docusaurus-theme/src/client/containers/LightBox/styles.module.scss
@@ -13,8 +13,8 @@
 }
 
 .visible {
-  opacity: 1;
-  visibility: visible;
+  opacity: 1 !important;
+  visibility: visible !important;
 }
 
 .nav > nav {
